2008-04-11  Murray Cumming  <murrayc@murrayc.com>

	* Add autoheader to autogen.sh, to create cairommconfig.h.in, to fix 
	the build for me.

2008-03-23  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/enums.h (FONT_TYPE_ATSUI, FONT_TYPE_QUARTZ):
	Change the definition of FONT_TYPE_ATSUI from CAIRO_FONT_TYPE_ATSUI to 
	CAIRO_FONT_TYPE_QUARTZ (the same numerical value) and document it as 
	deprecated. The others should be documented too.
	Added FONT_TYPE_QUARTZ.

== 1.5.0 ==

2008-03-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: bump cairo requirement to at least 1.5.10
	* NEWS: update for 1.5.0 release

2008-03-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/Makefile.am: install the new cairommconfig.h header and make sure
	that the .in file is distributed

2008-03-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/exception.cc: include <string> to fix the build on solaris which
	apparently doesn't include string from their exception header (Tim Mooney).
	Fixes bug #14559

2008-02-19  Tim Mooney  <enchanter@users.sourceforge.net>

	* configure.in: Added check, defining HAVE_MATH_H.
	* cairomm/context.cc:
	* examples/pdf-surface/main.cc:
	* examples/png_file/main.cc:
	* examples/ps-surface/main.cc:
	* examples/svg-surface/main.cc:
	* examples/text-rotate/text-rotate.cc: Added includes of math.h to 
	fix the build with Sun Workshop 12. Bug #14558.

2008-01-30  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/context.h: add new has_current_point() API to deal with the fact
	that cairo_get_current_point() changed from a void to a cairo_status_t
	return type, and we don't necessarily want to throw an exception here or it
	could break existing applications.  But this could be reconsidered

2008-01-30  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/xlib_surface.cc:
	* cairomm/xlib_surface.h: add new get_xrender_format() function (new in
	1.5.8) and add missing static create_with_xrender_format() function